--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FilmeConnection": "server=localhost;database=filme;user=root;password=root"
+    "FilmeConnection": "server=ModalGR-000985;database=Filmes;user=root;password=root"
   }
 }
